feat(ai-chat): complete phase 3-5 reliability and release gates
- add provider readiness probes, bounded retries and structured output
- enforce prompt budgets and untrusted-context boundaries
- optimize conversation summary and paginated detail queries
- add secure attachment upload and AI context support
- preserve exact reply and compaction request correlation
- add contract fixtures, golden evaluations and provider acceptance tests
- add fail-closed AI Chat release gate and operational documentation